--- a/config-easy.yml
+++ b/config-easy.yml
@@ -298,6 +298,9 @@ silverfish:
   infestation_chance: 0.1
 silverfishburn:
   enabled: true
+sinkhole:
+  enabled: true
+  chance: 0.05
 slimesplit:
   enabled: true
   max_slime_size: 5
