--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
-main: com.mercerenies.turtletroll.Main
+main: com.mercerenies.turtletroll.TurtleTrollPlugin
 name: A_Turtles_Troll
 version: "1.23"
 api-version: "1.19"
