--- a/config-easy.yml
+++ b/config-easy.yml
@@ -34,6 +34,8 @@ bees:
   probability: 0.1
   radius: 3
   friendly_axe: true
+birchglare:
+  enabled: true
 blazeeye:
   enabled: true
 blazepower:
