--- a/config-hard.yml
+++ b/config-hard.yml
@@ -34,6 +34,8 @@ bees:
   probability: 0.2
   radius: 6
   friendly_axe: true
+birchglare:
+  enabled: true
 blazeeye:
   enabled: true
 blazepower:
