--- a/config.yml
+++ b/config.yml
@@ -104,6 +104,9 @@ bees:
   # (Boolean) Whether a wooden axe negates the effect.
   friendly_axe: default
 
+birchglare:
+  enabled: default
+
 # Eyes of Blaze can be crafted from Flint & Steel and an Ender Pearl.
 # These work like Eyes of Ender, but they only work in the Nether and
 # find fortresses, not strongholds.
