--- a/config-easy.yml
+++ b/config-easy.yml
@@ -191,6 +191,8 @@ grievingwidow:
 johnny:
   enabled: true
   probability: 0.01
+kamekschaos:
+  enabled: true
 killerrabbit:
   enabled: true
 lavalaunch:
