--- a/config-hard.yml
+++ b/config-hard.yml
@@ -191,6 +191,8 @@ grievingwidow:
 johnny:
   enabled: true
   probability: 0.2
+kamekschaos:
+  enabled: true
 killerrabbit:
   enabled: true
 lavalaunch:
