--- a/config-easy.yml
+++ b/config-easy.yml
@@ -13,8 +13,8 @@ angrygolems:
   enabled: true
 anvil:
   enabled: true
-  min_drop_height: 9
-  max_drop_height: 20
+  min_drop_height: 9 # NOTE: Read this in HeavyRainFeature as well
+  max_drop_height: 20 # NOTE: Read this in HeavyRainFeature as well
   period: 15
 apache:
   enabled: true
@@ -188,6 +188,10 @@ gravestone:
 grievingwidow:
   enabled: true
   minutes_to_disable: 20
+heavyrain:
+  enabled: true
+  ticks_between_anvils: 40
+  anvil_count: 10
 johnny:
   enabled: true
   probability: 0.01
