--- a/config-normal.yml
+++ b/config-normal.yml
@@ -13,8 +13,8 @@ angrygolems:
   enabled: true
 anvil:
   enabled: true
-  min_drop_height: 7
-  max_drop_height: 15
+  min_drop_height: 7 # NOTE: Read this in HeavyRainFeature as well
+  max_drop_height: 15 # NOTE: Read this in HeavyRainFeature as well
   period: 10
 apache:
   enabled: true
@@ -188,6 +188,14 @@ gravestone:
 grievingwidow:
   enabled: true
   minutes_to_disable: 10
+heavyrain:
+  enabled: true
+  ticks_between_anvils: 40
+  anvil_count: 10
+heavyrain:
+  enabled: true
+  ticks_between_anvils: 20
+  anvil_count: 20
 johnny:
   enabled: true
   probability: 0.1
