--- a/config-easy.yml
+++ b/config-easy.yml
@@ -190,8 +190,8 @@ grievingwidow:
   minutes_to_disable: 20
 heavyrain:
   enabled: true
-  ticks_between_anvils: 40
-  anvil_count: 10
+  ticks_between_drops: 40
+  drop_count: 10
 johnny:
   enabled: true
   probability: 0.01
