--- a/config-normal.yml
+++ b/config-normal.yml
@@ -190,12 +190,8 @@ grievingwidow:
   minutes_to_disable: 10
 heavyrain:
   enabled: true
-  ticks_between_anvils: 40
-  anvil_count: 10
-heavyrain:
-  enabled: true
-  ticks_between_anvils: 20
-  anvil_count: 20
+  ticks_between_drops: 40
+  drop_count: 10
 johnny:
   enabled: true
   probability: 0.1
