--- a/config.yml
+++ b/config.yml
@@ -524,6 +524,11 @@ sandattack:
   red_sand_probability: default
   max_drop_height: default
 
+sandstorm:
+  enabled: default
+  ticks_between_drops: default
+  drop_count: default
+
 sheepcolor:
   enabled: default
 
