--- a/config-insane.yml
+++ b/config-insane.yml
@@ -296,6 +296,9 @@ sandattack:
   enabled: true
   red_sand_probability: 0.5
   max_drop_height: 15 # NOTE: Read this in SandstormFeature as well
+sandblaster:
+  enabled: true
+  sand_radius: 20.0
 sandstorm:
   enabled: true
   ticks_between_drops: 240
