--- a/config-normal.yml
+++ b/config-normal.yml
@@ -296,6 +296,9 @@ sandattack:
   enabled: true
   red_sand_probability: 0.1
   max_drop_height: 15 # NOTE: Read this in SandstormFeature as well
+sandblaster:
+  enabled: true
+  sand_radius: 6.0
 sandstorm:
   enabled: true
   ticks_between_drops: 5
