--- a/config-insane.yml
+++ b/config-insane.yml
@@ -273,6 +273,8 @@ pokeball:
 platefire:
   enabled: true
   probability: 1.0
+prisonersdilemma:
+  enabled: true
 pufferfish:
   enabled: true
   pufferfish_count: 10
