--- a/config.yml
+++ b/config.yml
@@ -495,6 +495,9 @@ platefire:
   enabled: default
   probability: default
 
+prisonersdilemma:
+  enabled: default
+
 pufferfish:
   enabled: default
   pufferfish_count: default
