--- a/plugin.yml
+++ b/plugin.yml
@@ -20,6 +20,8 @@ permissions:
     default: true
   com.mercerenies.turtletroll.command.answer:
     default: true
+  com.mercerenies.turtletroll.command.prisoner:
+    default: true
   com.mercerenies.turtletroll.feature.list:
     default: true
   com.mercerenies.turtletroll.feature.describe:
