--- a/config-easy.yml
+++ b/config-easy.yml
@@ -63,6 +63,9 @@ cakes:
 carefulhands:
   enabled: true
   probability: 0.02
+cataclysm:
+  enabled: true
+  radius: 2.0
 catbat:
   enabled: true
   probability: 1.0
