--- a/config-hard.yml
+++ b/config-hard.yml
@@ -86,9 +86,6 @@ classiclava:
   end_spread: 0
 cookies:
   enabled: true
-creeperdeath:
-  enabled: true
-  allay_count: 4
 deathscoreboard:
   enabled: true
 demand:
@@ -382,7 +379,8 @@ weepingangel:
   movement_speed: 1.2
 witchattack:
   enabled: true
-  probability: 0.5
+  parrot_probability: 0.3
+  allay_probability: 0.3
 witches:
   enabled: true
   probability: 0.10
