--- a/config-normal.yml
+++ b/config-normal.yml
@@ -86,9 +86,6 @@ classiclava:
   end_spread: 0
 cookies:
   enabled: true
-creeperdeath:
-  enabled: true
-  allay_count: 3
 deathscoreboard:
   enabled: true
 demand:
@@ -382,7 +379,8 @@ weepingangel:
   movement_speed: 1.0 # Meters per tick
 witchattack:
   enabled: true
-  probability: 0.5
+  parrot_probability: 0.25
+  allay_probability: 0.25
 witches:
   enabled: true
   probability: 0.05
