--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,11 @@
 main: com.mercerenies.turtletroll.TurtleTrollPlugin
 name: A_Turtles_Troll
-version: "1.24.1"
+version: "1.25"
 api-version: "1.19"
 author: Mercerenies
 description: Have fun :)
 load: STARTUP
-depend:
+softdepend:
   - ProtocolLib
 commands:
   turtle:
