--- a/plugin.yml
+++ b/plugin.yml
@@ -7,6 +7,7 @@ description: Have fun :)
 load: STARTUP
 softdepend:
   - ProtocolLib
+  - DiscordSRV
 commands:
   turtle:
     description: Enable or disable features of A Turtle's Troll
