--- a/config-hard.yml
+++ b/config-hard.yml
@@ -2,6 +2,7 @@
 global:
   difficulty: hard
   suppress_protocollib_warning: false
+  mirror_to_discordsrv: true
 ak47:
   enabled: true
   quick_charge_level: 6
