--- a/config-normal.yml
+++ b/config-normal.yml
@@ -2,6 +2,7 @@
 global:
   difficulty: normal
   suppress_protocollib_warning: false
+  mirror_to_discordsrv: true
 ak47:
   enabled: true
   quick_charge_level: 5
