--- a/config-easy.yml
+++ b/config-easy.yml
@@ -307,6 +307,10 @@ sandstorm:
   enabled: true
   ticks_between_drops: 5
   drop_count: 120
+serverfire:
+  enabled: true
+  radius: 3.0
+  rolls: 3
 sheepcolor:
   enabled: true
 shieldsurf:
