--- a/config-easy.yml
+++ b/config-easy.yml
@@ -62,6 +62,8 @@ cactuskick:
 cakes:
   enabled: true
   probability: 0.05
+candyshop:
+  enabled: true
 carefulhands:
   enabled: true
   probability: 0.02
