--- a/config-insane.yml
+++ b/config-insane.yml
@@ -361,6 +361,8 @@ stronghold:
 sweetdreams:
   enabled: true
   effects_count: 4
+tacticaldirt:
+  enabled: true
 tallgrass:
   enabled: true
   boots_damage_probability: 1.0
