--- a/config-hard.yml
+++ b/config-hard.yml
@@ -190,6 +190,8 @@ gravestone:
 grievingwidow:
   enabled: true
   minutes_to_disable: 8
+happyrain:
+  enabled: true
 heavyrain:
   enabled: true
   ticks_between_drops: 20
