--- a/config-normal.yml
+++ b/config-normal.yml
@@ -190,6 +190,8 @@ gravestone:
 grievingwidow:
   enabled: true
   minutes_to_disable: 10
+happyrain:
+  enabled: true
 heavyrain:
   enabled: true
   ticks_between_drops: 40
