--- a/config-hard.yml
+++ b/config-hard.yml
@@ -192,6 +192,8 @@ grievingwidow:
   minutes_to_disable: 8
 happyrain:
   enabled: true
+  drop_probability: 0.2
+  drop_period: 10
 heavyrain:
   enabled: true
   ticks_between_drops: 20
