--- a/config-easy.yml
+++ b/config-easy.yml
@@ -241,6 +241,9 @@ nice:
   enabled: true
 nodrops:
   enabled: true
+noyou:
+  enabled: true
+  odds: 1000000
 nylium:
   enabled: true
 obsidianwall:
