--- a/config-hard.yml
+++ b/config-hard.yml
@@ -280,6 +280,10 @@ pillagerdeath:
   slime_size: 2
 pokeball:
   enabled: true
+pottery:
+  enabled: true
+  replace_chance: 0.08
+  infected_chance: 0.2
 platefire:
   enabled: true
   probability: 0.1
