--- a/config-normal.yml
+++ b/config-normal.yml
@@ -280,6 +280,10 @@ pillagerdeath:
   slime_size: 2
 pokeball:
   enabled: true
+pottery:
+  enabled: true
+  replace_chance: 0.05
+  infected_chance: 0.1
 platefire:
   enabled: true
   probability: 0.05
