--- a/config-insane.yml
+++ b/config-insane.yml
@@ -397,6 +397,9 @@ weepingangel:
   spawn_probability: 0.1
   max_angels_per_chunk: 6
   movement_speed: 3.0
+whitedirt:
+  enabled: true
+  chance: 0.1
 witchattack:
   enabled: true
   parrot_probability: 0.2
