--- a/config-insane.yml
+++ b/config-insane.yml
@@ -199,6 +199,8 @@ heavyrain:
   enabled: true
   ticks_between_drops: 15
   drop_count: 40
+horny:
+  enabled: true
 johnny:
   enabled: true
   probability: 0.9
