--- a/config-normal.yml
+++ b/config-normal.yml
@@ -199,6 +199,8 @@ heavyrain:
   enabled: true
   ticks_between_drops: 40
   drop_count: 10
+horny:
+  enabled: true
 johnny:
   enabled: true
   probability: 0.1
